v1.5 + added better documentation